--- a/src/app/features/word-details/word-details.component.css
+++ b/src/app/features/word-details/word-details.component.css
@@ -28,3 +28,32 @@ article {
     overflow-wrap: anywhere;
     padding: 10px;
 }
+
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* https://css-loaders.com/spinner */
+.loader {
+    width: 50px;
+    padding: 8px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background: #af6feb;
+    --_m:
+        conic-gradient(#0000 10%, #000),
+        linear-gradient(#000 0 0) content-box;
+    -webkit-mask: var(--_m);
+    mask: var(--_m);
+    -webkit-mask-composite: source-out;
+    mask-composite: subtract;
+    animation: l3 1s infinite linear;
+}
+
+@keyframes l3 {
+    to {
+        transform: rotate(1turn)
+    }
+}
