--- a/src/app/shared/components/player/player.component.html
+++ b/src/app/shared/components/player/player.component.html
@@ -1,23 +1,13 @@
-<div>
-    <button class="player__button" (click)="isPlaying()">
-        @if (playing) {
-        <span>
-            <svg data-testid="pause-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <title>Pause</title>
-                <path fill="#a463d6" d="M14,19H18V5H14M6,19H10V5H6V19Z" />
-            </svg>
-        </span>
+<button data-testid="play-btn" class="player__button" (click)="isPlaying()">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <title>{{ playing ? "Pause" : "Play" }}</title>
+        @if(playing) {
+            <path data-testid="pause-svg" fill="#a463d6" d="M14,19H18V5H14M6,19H10V5H6V19Z" />
+        } @else {
+            <path data-testid="play-svg" fill="#a463d6" d="M8,5.14V19.14L19,12.14L8,5.14Z" />
         }
-        @if (!playing) {
-        <span>
-            <svg data-testid="play-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <title>Play</title>
-                <path fill="#a463d6" d="M8,5.14V19.14L19,12.14L8,5.14Z" />
-            </svg>
-        </span>
-        }
-        <span class="sr-only purple-text">
-            {{ playing ? "Pause" : "Play" }}
-        </span>
-    </button>
-</div>
+    </svg>
+    <span data-testid="player-status" class="sr-only purple-text">
+        {{ playing ? "Pause" : "Play" }}
+    </span>
+</button>
