--- a/src/app/features/word-details/word-details.component.html
+++ b/src/app/features/word-details/word-details.component.html
@@ -1,5 +1,7 @@
 @if (wordResource.error()) {
-<div class="app__error">{{ wordResource.error() }}</div>
+    <div class="app__error">
+        {{ wordResource.error() }}
+    </div>
 }
 
 @if (wordResource.isLoading()) {
